--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -25,7 +25,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
+  rxdart:
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
@@ -44,6 +44,9 @@ flutter:
     - assets/loading.flr
     - assets/6117.jpg
     - assets/New File.flr
+    - assets/beachball-alpha.png
+    - assets/binoculars-alpha.png
+    - assets/chair-alpha.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
