--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -20,12 +20,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   #battery: ^0.2.3
+  rxdart:
+  redux:
+  flutter_slidable: "^0.4.9"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  rxdart:
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
